erDiagram
    %% Fact Table (Center of Star)
    SALES_TRANSACTIONS {
        int transaction_id PK
        int customer_id FK
        int product_id FK
        int date_id FK
        int quantity
        decimal unit_price
        decimal total_amount
        decimal discount_amount
        timestamp created_at
    }

    %% Dimension Tables (Points of Star)
    CUSTOMERS {
        int customer_id PK
        string first_name
        string last_name
        string email
        string phone
        string city
        string state
        string country
        string customer_segment
        date registration_date
        timestamp created_at
    }

    PRODUCTS {
        int product_id PK
        string product_name
        string category
        string subcategory
        string brand
        decimal price
        decimal cost
        timestamp created_at
    }

    DATE_DIMENSION {
        int date_id PK
        date date_value
        int year
        int quarter
        int month
        int day
        int day_of_week
        int week_of_year
        boolean is_weekend
    }

    %% Relationships (Star Schema)
    SALES_TRANSACTIONS ||--o{ CUSTOMERS : "customer_id"
    SALES_TRANSACTIONS ||--o{ PRODUCTS : "product_id"
    SALES_TRANSACTIONS ||--o{ DATE_DIMENSION : "date_id"